--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ serde_json = "1.0"
 dirs = "4.0.0"
 tokio = { version = "1.21.2", features = ["full"] }
 async-trait = "0.1.41"
+anyhow = "1.0.66"
+send_wrapper = "0.6.0"
+serde_path_to_error = "0.1.8"
 
 [dev-dependencies]
 mockall = { version = "0.11.2", features = ["nightly"] }
